--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.0",
     "classnames": "^2.3.1",
+    "cors": "^2.8.5",
     "jquery": "^3.6.0",
     "mongodb": "^3.6.7",
     "mongodb-uri": "^0.9.7",
+    "mongoose": "^5.12.10",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-datepicker": "^3.8.0",
