--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0",
+    "bootstrap-icons": "^1.5.0",
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
     "jquery": "^3.6.0",
