--- a/package.json
+++ b/package.json
@@ -7,20 +7,23 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.0.0",
     "bootstrap-icons": "^1.5.0",
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
     "jquery": "^3.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.7",
     "mongodb-uri": "^0.9.7",
     "mongoose": "^5.12.10",
+    "passport": "^0.4.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^1.1.5",
     "uniqid": "^5.3.0",
     "web-vitals": "^1.1.1"
   },
