--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
-    "bootstrap": "^5.0.0",
+    "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
@@ -18,6 +18,8 @@
     "mongodb-uri": "^0.9.7",
     "mongoose": "^5.12.10",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-datepicker": "^3.8.0",
