--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "mongodb": "^3.6.7",
     "mongodb-uri": "^0.9.7",
     "mongoose": "^5.12.10",
+    "nodemailer": "^6.6.3",
+    "nodemon": "^2.0.12",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
